re-styled wysiwyg space and word wrapping, styled tables in wysiwyg, fixed policy import handler

--- a/client/app/styles/_wysiwyg.scss
+++ b/client/app/styles/_wysiwyg.scss
@@ -7,5 +7,10 @@
         white-space: pre-wrap;
         word-wrap: normal;
         background-color: transparent;
+        table {
+            @extend .table;
+            @extend .table-bordered;
+            @extend .table-condensed;
+        }
     }
 }
